--- a/{{ cookiecutter.repo_name }}/report/report.tex
+++ b/{{ cookiecutter.repo_name }}/report/report.tex
@@ -110,7 +110,7 @@
 
 % Title
 \title{ {{ cookiecutter.project_name }} }
-\author{ {{ cookiecutter.author_name }} }
+\author{ {{ cookiecutter.author_name }} - \href{mailto:{{ cookiecutter.author_email }}}{ {{ cookiecutter.author_email }} } }
 %\date{}
 
 
