--- a/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "288fb7fa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'base (Python 3.13.2)' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n base ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using plot_style.mlpstyle as plot style for matplotlib.\n"
      ]
     }
    ],
@@ -23,7 +20,22 @@
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "print(Path(\".\"))"
+    "root_folder = Path(\".\").resolve().parent\n",
+    "data_folder = root_folder / \"data\"\n",
+    "external_data_folder = data_folder / \"external\"\n",
+    "processed_data_folder = data_folder / \"processed\"\n",
+    "raw_data_folder = data_folder / \"raw\"\n",
+    "\n",
+    "report_folder = root_folder / \"report\"\n",
+    "report_figures_folder = report_folder / \"figures\"\n",
+    "report_tables_folder = report_folder / \"tables\"\n",
+    "\n",
+    "mlpstyle_path = root_folder / \"plot_style.mlpstyle\"\n",
+    "if mlpstyle_path.exists():\n",
+    "    plt.style.use(mlpstyle_path)\n",
+    "    print(f\"Using {mlpstyle_path.name} as plot style for matplotlib.\")\n",
+    "else:\n",
+    "    print(\"No style found, using matplotlib default\")"
    ]
   },
   {
@@ -37,13 +49,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pymc_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
