Refactor plot style path assignment for clarity and consistency

--- a/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
@@ -17,9 +17,7 @@
     "\n",
     "from src import project_paths\n",
     "\n",
-    "root_folder: Path = project_paths.root\n",
-    "\n",
-    "mlpstyle_path = root_folder / \"plot_style.mlpstyle\"\n",
+    "mlpstyle_path: Path = project_paths.root / \"plot_style.mlpstyle\"\n",
     "if mlpstyle_path.exists():\n",
     "    plt.style.use(mlpstyle_path)\n",
     "    print(f\"Using {mlpstyle_path.name} as plot style for matplotlib.\")\n",
