Refactor imports in exploratory_analysis.ipynb and __init__.py for consistency; remove unused inputenc package from report.tex

--- a/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/exploratory_analysis.ipynb
@@ -9,11 +9,12 @@
    "source": [
     "# %run ./setup.py\n",
     "\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
+    "sys.path.insert(0, \"..\")\n",
     "\n",
     "from src import project_paths\n",
     "\n",
@@ -28,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effad635",
+   "id": "cbd5e312",
    "metadata": {},
    "outputs": [],
    "source": []
