Refactor notebook style configuration and remove legacy mplstyle file
- Added import for cool_styles in the template notebook.
- Applied cool_styles.coastalarvest style to matplotlib plots.
- Deleted the outdated plot_style.mplstyle file to streamline styling process.

--- a/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
@@ -12,11 +12,15 @@
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
+    "import cool_styles\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "sys.path.insert(0, \"..\")\n",
     "\n",
     "from src import project_paths\n",
+    "\n",
+    "plt.style.use(cool_styles.coastalarvest)\n",
     "\n",
     "mlpstyle_path: Path = project_paths.root / \"plot_style.mlpstyle\"\n",
     "if mlpstyle_path.exists():\n",
