Refactor logging configuration and improve project structure by removing unused imports and adding logger initialization

--- a/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
@@ -9,25 +9,14 @@
    "source": [
     "# %run ./setup.py\n",
     "\n",
-    "import sys\n",
     "from pathlib import Path\n",
     "\n",
     "import cool_styles\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
+    "from {{cookiecutter.repo_name}} import project_paths\n",
     "\n",
-    "sys.path.insert(0, \"..\")\n",
-    "\n",
-    "from src import project_paths\n",
-    "\n",
-    "plt.style.use(cool_styles.coastalarvest)\n",
-    "\n",
-    "mlpstyle_path: Path = project_paths.root / \"plot_style.mlpstyle\"\n",
-    "if mlpstyle_path.exists():\n",
-    "    plt.style.use(mlpstyle_path)\n",
-    "    print(f\"Using {mlpstyle_path.name} as plot style for matplotlib.\")\n",
-    "else:\n",
-    "    print(\"No style found, using matplotlib default\")"
+    "plt.style.use(cool_styles.coastalarvest)"
    ]
   },
   {
