Refactor notebook imports and add main application file with initial setup

--- a/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/template.ipynb
@@ -7,16 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %run ./setup.py\n",
-    "\n",
     "from pathlib import Path\n",
     "\n",
-    "import cool_styles\n",
+    "from cool_styles import coastalarvest\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from {{cookiecutter.repo_name}} import project_paths\n",
     "\n",
-    "plt.style.use(cool_styles.coastalarvest)"
+    "from {{cookiecutter.repo_name}}.project_configs import ProjectPaths\n",
+    "\n",
+    "project_paths = ProjectPaths()\n",
+    "\n",
+    "plt.style.use(coastalarvest)"
    ]
   },
   {
